http://jira.aplana.com/browse/APLANATS-1344 исправления исправления ошибок найденных FindBugом